--- a/core/lang/SL_framework-ru_RU.po
+++ b/core/lang/SL_framework-ru_RU.po
@@ -4,7 +4,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-01-31T08:09:54+00:00\n"
+"PO-Revision-Date: 2012-02-03T09:27:47+00:00\n"
+"Last-Translator: Limych <http://khrolenok.ru/>\n"
 "Last-Translator: Pacifik <http://www.androiddeveloper.ru>\n"
 "Last-Translator: Slawka <http://eth0.org.ru>\n"
 "Last-Translator: alexmv <>\n"
@@ -35,31 +36,31 @@ msgid "Show the advanced options:"
 msgstr "Показать дополнительные параметры:"
 
 msgid "Will display additionnal information on the plugin (including SVN features). Recommended for developpers which develop plugins with this framework."
-msgstr "Покажет additionnal информацию о плагине (в том числе SVN особенности). Рекомендуется для developpers плагинов, которые развиваются с этой структурой."
+msgstr "Покажет дополнительную информацию о плагине (в том числе SVN особенности). Рекомендуется для разработчиков плагинов, которые развиваются с этой структурой."
 
 msgid "Show the developpers documentation:"
-msgstr "Показать developpers документации:"
+msgstr "Показать документацию разработчиков:"
 
 msgid "You should register a new wordpress plugin first on %s."
-msgstr "Вы должны зарегистрировать новый плагин WordPress сначала на %s."
+msgstr "Вы должны сначала зарегистрировать новый плагин WordPress на %s."
 
 msgid "What is your SVN Login:"
-msgstr "Каково ваше SVN Логин:"
+msgstr "Какой у Вас SVN-логин:"
 
 msgid "You should have an account on %s before. Thus, the login will be the same!"
-msgstr "Вы должны иметь учетную запись на %s. раньше. Таким образом, Логин будет такой же!"
+msgstr "Сперва Вы должны получить учетную запись на %s. Здесь логин будет таким же."
 
 msgid "What is your SVN Password:"
-msgstr "Каково ваше SVN Пароль:"
+msgstr "Какой у Вас SVN-пароль:"
 
 msgid "Same comment as above..."
-msgstr "Те же замечания, что и выше ..."
+msgstr "Такой же комментарий, как и раньше…"
 
 msgid "What is your Author Name:"
-msgstr "Каково Ваше Имя автора:"
+msgstr "Ваше имя автора:"
 
 msgid "Your author name is the name that is displayed in your plugin."
-msgstr "Ваше имя автора есть имя, которое отображается в вашем плагине."
+msgstr "Имя автора будет отображается в информации о Вашем плагине."
 
 msgid "Do you want to udate the translations files when the plugin page is called:"
 msgstr ""
@@ -68,13 +69,13 @@ msgid "This is useful if you develop a plugin, thus you will see when new senten
 msgstr ""
 
 msgid "Summary page for the plugins developped with the SL framework"
-msgstr "Основная информация страница для плагинов разработанных с рамками SL"
+msgstr "Страница сводной информации для плагинов разработанных на основе фреймфорка SL"
 
 msgid "The core file used for the SedLex plugins is:"
 msgstr "Основной файл, используемый для SedLex плагинов:"
 
 msgid "For now, you have installed %d  plugins including %d plugins developped with the 'SL framework':"
-msgstr "Пока вы установили %d плагинов в том числе %d плагинов разработанных с &quot;SL рамках &#039;:"
+msgstr "Пока вы установили %d плагинов в том числе %d плагинов разработанных на основе фреймворка SL:"
 
 msgid "Plugin name"
 msgstr "Название плагина"
@@ -83,37 +84,37 @@ msgid "Description"
 msgstr "Описание"
 
 msgid "Status of the core"
-msgstr "Статус основного"
+msgstr "Состояние ядра"
 
 msgid "Version: %s by %s"
-msgstr "Версия: %s by %s"
+msgstr ""
 
 msgid "List of SL plugins"
 msgstr "Список плагинов SL"
 
 msgid "Parameters of the framework"
-msgstr "Параметры рамки"
+msgstr "Параметры фреймворка"
 
 msgid "The following description is a quick tutorial on about how to create a plugin with the SL framework. (Please note that the following description is in English for developpers, sorry for this inconvenience)"
-msgstr "Следующее описание краткое руководство по о том, как создать плагин рамки SL. (Обратите внимание, что следующее описание на английском языке для developpers, извините за неудобства)"
+msgstr "Следующее описание является кратким руководством о том, как создать плагин на основе фреймворка SL. (Обратите внимание, что описание на английском языке, извините за неудобства)"
 
 msgid "How to develop a plugin?"
-msgstr "Как развивать плагин?"
+msgstr "Как создать плагин?"
 
 msgid "Framework documentation"
-msgstr "Рамочная документации"
+msgstr "Документация фреймворка"
 
 msgid "Manage translation of the framework"
-msgstr "Управление переводом рамках"
+msgstr "Управление переводом фреймворка"
 
 msgid "An Unexpected HTTP Error occurred during the API request."
-msgstr "Неожиданная ошибка HTTP произошло во время API запроса."
+msgstr "Неожиданная ошибка HTTP, произошедшая во время API запроса."
 
 msgid "This plugin does not seem to be hosted on the wordpress repository."
-msgstr "Этот плагин, кажется, не быть размещен на репозитории WordPress."
+msgstr "Похоже, этот плагин не был размещен в репозитории WordPress."
 
 msgid "The Wordpress page: %s"
-msgstr "страница Wordpress: %s."
+msgstr "Страница на сайте Wordpress: %s"
 
 msgid "Last update:"
 msgstr "Последнее обновление:"
@@ -122,28 +123,28 @@ msgid "Rating: %s"
 msgstr "Рейтинг: %s"
 
 msgid "by %s persons"
-msgstr "лицами %s"
+msgstr "%s людьми"
 
 msgid "Number of download:"
-msgstr "Количество скачивание:"
+msgstr "Скачиваний:"
 
 msgid "Update with the core of the %s plugin (only if you definitely know what you do)"
-msgstr "Обновление с ядра плагина %s. (только если вы точно знаете, что вы делаете)"
+msgstr "Обновить с ядром плагина %s (только если Вы точно знаете, что вы делаете)."
 
 msgid "SVN management"
-msgstr "SVN управление"
+msgstr "Управление SVN"
 
 msgid "The SVN repository: %s"
-msgstr "репозиторий SVN: %s"
+msgstr "SVN-репозиторий: %s"
 
 msgid "An error occurs when requesting %s"
-msgstr "ошибка при запросе %s"
+msgstr "Ошибка при запросе %s"
 
 msgid "You do not seem to have a repository for Wordpress because %s returns a 404 error. Thus, ask for one here: %s"
-msgstr "Если  хранилище для Wordpress возвращает ошибку (почему %s) 404. Попробуйте посмотреть его тут %s"
+msgstr ""
 
 msgid "The SVN repository is identical to your local plugin! You do not need to update..."
-msgstr "Ваш локальный файл идентичен файлу в репозитории SVN. Обновлений нет!"
+msgstr "Ваш локальный файл идентичен файлу в репозитории SVN. Нет необходимости в обновлении…"
 
 msgid "(Cannot check the version of the plugin due to HTTP Error occurred during the API request)"
 msgstr "Во время запроса API произошла HTTP ошибка. Обновления проверить не удалось."
@@ -152,7 +153,7 @@ msgid "(If you update, a new version will be released, i.e. %s instead of %s)"
 msgstr "Доступна новая версия. Новая версия %s, Ваша версия %s"
 
 msgid "The SVN repository is not identical to your local plugin!"
-msgstr "Ваш плагин модифицирован или не совпадает с репозитарием SVN"
+msgstr "Ваш плагин не совпадает с содержимым SVN-репозитория!"
 
 msgid "General modifications:"
 msgstr "Основные модификации:"
@@ -161,7 +162,7 @@ msgid "Modify the version of the plugin and the readme.txt file"
 msgstr "Изменить версию плагина и файл readme.txt"
 
 msgid "Overwrite the local plugin files with files stored the SVN repository"
-msgstr "Заменить ваши файлы файлами с репозитария SVN"
+msgstr "Заменить локальные файлы плагина файлами из SVN-репозитория"
 
 msgid "Quick"
 msgstr "Быстро"
@@ -170,7 +171,7 @@ msgid "Slow"
 msgstr "Медленно"
 
 msgid "Update the SVN repository with your current local plugin files"
-msgstr ""
+msgstr "Обновить SVN-репозиторий вашими текущими файлами плагина"
 
 msgid "Please modify the Version in %s in order to be allowed to commit it"
 msgstr ""
@@ -203,13 +204,13 @@ msgid "Update the SVN repository %s with your current local plugin files (slower
 msgstr ""
 
 msgid "Update the SVN repository %s with your current local plugin files"
-msgstr ""
+msgstr "Обновить SVN-репозиторий %s вашими текущими файлами плагина"
 
 msgid "Overwrite the local plugin %s files with files stored the SVN repository"
-msgstr ""
+msgstr "Заменить локальные файлы плагина %s файлами из SVN-репозитария"
 
 msgid "Updating the local cache"
-msgstr ""
+msgstr "Обновление локального кэша"
 
 msgid "folder created"
 msgstr "каталог создан"
@@ -218,7 +219,7 @@ msgid "folder creation has failed !"
 msgstr "не удалось создать каталог !"
 
 msgid "%s bytes transfered"
-msgstr "байт отправлено"
+msgstr "%s байт отправлено"
 
 msgid "An error occurred during the retrieval of files on the server ! Sorry ..."
 msgstr ""
@@ -233,7 +234,7 @@ msgid "An error occurred when listing the files of the %s plugin ! Sorry ..."
 msgstr ""
 
 msgid "Browsing the modifications"
-msgstr ""
+msgstr "Просмотр изменений"
 
 msgid "Comparing %s with %s"
 msgstr ""
@@ -296,16 +297,16 @@ msgid "Save these data"
 msgstr "Сохранить эти данные"
 
 msgid "The current text"
-msgstr ""
+msgstr "Текущий текст"
 
 msgid "The proposed text"
-msgstr ""
+msgstr "Предлагаемый текст"
 
 msgid "There is a problem with the header of %s. It appears that there is no Version header."
 msgstr ""
 
 msgid "The data has been saved. You may close this window."
-msgstr ""
+msgstr "Данные сохранены. Вы можете закрыть окно."
 
 msgid "Error: %s function is not found"
 msgstr "Ошибка: %s функция не найдена"
@@ -326,49 +327,49 @@ msgid "The file %s cannot be modified/created. You should have a problem with fi
 msgstr ""
 
 msgid "The file %s cannot be created. You should have a problem with file permissions or security restrictions."
-msgstr ""
+msgstr "Файл %s нельзя переименовать. У вас не достаточно прав для этого."
 
 msgid "The file %s cannot be modified. You should have a problem with file permissions or security restrictions."
-msgstr ""
+msgstr "Файл %s нельзя переименовать. У вас не достаточно прав для этого."
 
 msgid "The file %s cannot be compressed."
-msgstr "Файы %s не могут быть сжаты."
+msgstr "Файл %s не может быть сжат."
 
 msgid "Parameters"
 msgstr "Параметры"
 
 msgid "Here are the parameters of the plugin. Modify them at will to fit your needs."
-msgstr ""
+msgstr "Вот параметры плагина. Изменить их по своему усмотрению в соответствии с Вашими потребностями."
 
 msgid "Here are the parameters of the framework. Modify them at will to fit your needs."
-msgstr ""
+msgstr "Вот параметры framework. Изменить их по своему усмотрению в соответствии с Вашими потребностями."
 
 msgid "Values"
 msgstr "Значения"
 
 msgid "Error: the submitted value is not an integer and thus, the parameter has not been updated!"
-msgstr ""
+msgstr "Ошибка: представленные значение не является целым числом и, таким образом, параметр не был обновлен!"
 
 msgid "Warning: some characters have been removed because they are not allowed here"
-msgstr ""
+msgstr "Внимание: некоторые символы были удалены"
 
 msgid "Error: the submitted string does not match the constrains"
-msgstr ""
+msgstr "Ошибка: представленные строка не совпадает"
 
 msgid "Error: the submitted file can not be uploaded!"
-msgstr ""
+msgstr "Ошибка: представленные файл не может быть загружен!"
 
 msgid "Error: %s file already exists"
 msgstr "Ошибка: %s файл уже существует"
 
 msgid "(integer)"
-msgstr ""
+msgstr "(целое)"
 
 msgid "(If you want to delete this file, please check this box %s)"
-msgstr ""
+msgstr "(Если вы хотите удалить этот файл, пожалуйста, отметьте этот флажок %s )"
 
 msgid "Update"
-msgstr "Обновление"
+msgstr "Обновить"
 
 msgid "Some parameters have not been updated due to errors (see below)!"
 msgstr ""
@@ -392,16 +393,16 @@ msgid "Translations available for this plugin (i.e. %s)"
 msgstr ""
 
 msgid "Translations available for the SL framework (stored in %s)"
-msgstr ""
+msgstr "Доступные переводы для SL framework (хранится в %s )"
 
 msgid "Translations installed for Wordpress"
-msgstr ""
+msgstr "Переводы установлены для Wordpress"
 
 msgid "Adding a new translation for this language: %s"
-msgstr ""
+msgstr "Добавление новых переводов для данного языка: %s."
 
 msgid "Sentence to translate"
-msgstr ""
+msgstr "Предложение перевести"
 
 msgid "Translation"
 msgstr "Перевод"
@@ -425,40 +426,40 @@ msgid "Modify the translation files"
 msgstr "Изменить файлы перевода"
 
 msgid "%s sentences have been translated (i.e. %s)."
-msgstr ""
+msgstr "%s слов/словосочетаний было переведено (это %s.)"
 
 msgid "%s sentences have been translated (i.e. %s) %s %s sentences have to be checked because they are close (but not identical) to those to translate.%s"
 msgstr ""
 
 msgid "The translation %s have been sent"
-msgstr ""
+msgstr "перевод %s был отправлен"
 
 msgid "An error occured sending the email."
-msgstr ""
+msgstr "ошибка отправки электронной почты."
 
 msgid "Make sure that your wordpress is able to send email."
-msgstr ""
+msgstr "Убедитесь, что ваш WordPress может отправлять электронную почту."
 
 msgid "%s file has been updated for %s"
-msgstr ""
+msgstr "файл %s была обновлена ​​как %s."
 
 msgid "%s file has been updated from this file"
-msgstr ""
+msgstr "файл %s была обновлена ​​из этого файла"
 
 msgid "%s file has been created with a new translation for %s"
-msgstr ""
+msgstr "файл %s была создана с новым переводом на как %s."
 
 msgid "%s file has been created from this file"
-msgstr "файл был создан из этого файла"
+msgstr "файл %s был создан из этого файла"
 
 msgid "If you do not want to loose your translations on the next upgrading of this plugin, it is recommended to send the translation files to the author by clicking %s here %s !"
-msgstr ""
+msgstr "Если вы не хотите потерять ваши переводы на следующей модернизации этого плагина, рекомендуется отправить файлы переводов для автора, нажав %s. Здесь %s !"
 
 msgid "If you do not want to loose your translations on the next upgrading of this plugin, please save them on your hard disk before upgrading and then restore them after the upgrade !"
-msgstr ""
+msgstr "Если вы не хотите потерять ваши переводы на следующей модернизации этого плагина, пожалуйста, сохраните их на жестком диске перед обновлением, а затем восстановить их после обновления!"
 
 msgid "The following languages may be used by your Wordpress installation."
-msgstr ""
+msgstr "Список языков для установки"
 
 msgid "Language"
 msgstr "Язык"
@@ -467,7 +468,7 @@ msgid "Information"
 msgstr "Информация"
 
 msgid "There is a need to update the list of available translation at the Wordpress repository because no information are available for the version of Wordpress (i.e. %s)."
-msgstr ""
+msgstr "Необходимо обновить список доступных переводов их репозитария Wordpress ( %s )"
 
 msgid "Update the list of translations"
 msgstr "Обновить список переводов"
@@ -491,13 +492,13 @@ msgid "Download"
 msgstr "Скачать"
 
 msgid "Change the default language used"
-msgstr ""
+msgstr "Изменение языка по умолчанию"
 
 msgid "If you want to modify the default language of the dashboad, and thus of the plugin, please select your language here:"
-msgstr ""
+msgstr "Если вы хотите изменить язык по умолчанию и язык плагина, пожалуйста, выберите язык здесь:"
 
 msgid "Set the language"
-msgstr " Установка языка"
+msgstr "Установить язык"
 
 msgid "The file %s has been downloaded (version %s)"
 msgstr ""
@@ -518,7 +519,7 @@ msgid "There are %d sentences to be translated in this plugin."
 msgstr ""
 
 msgid "Ratio %"
-msgstr ""
+msgstr "Соотношение %"
 
 msgid "Translators"
 msgstr "Переводчики"
@@ -533,25 +534,25 @@ msgid "Add a new translation"
 msgstr "Добавить новый перевод"
 
 msgid "You may add a new translation hereafter (Please note that it is recommended to send your translation to the author so that he would be able to add your translation to the future release of the plugin !)"
-msgstr ""
+msgstr "Тут вы можете создать свой язык, если для него нет перевода и перевести  &#039;SL framework&#039; на ваш родной язык и отправить его автору плагина."
 
 msgid "Add"
 msgstr "Добавить"
 
 msgid "The 'SL framework' is a framework used for developping many plugins like this one. Thus, if you participate translating the framework, it will be very helpful for a bunch of plugins."
-msgstr ""
+msgstr "Тут вы можете сделать перевод для многих плагинов в рамках &#039;SL framework&#039;. Эти переводы могут и будут использованы и в других плагинах."
 
 msgid "There is %d languages supported for the 'SL framework'."
-msgstr ""
+msgstr "Уже существует %d языков, которые поддерживает &#039;SL framework&#039;."
 
 msgid "There is %d sentence to be translated in the framework."
-msgstr ""
+msgstr "Есть еще %d слов/словосочитаний, которые бы вы могли помочь перевести."
 
 msgid "This is the default language of the plugin framework. It cannot be modified."
-msgstr ""
+msgstr "Это язык по-умолчанию для framework. Его нельзя изменить."
 
 msgid "Send to the author of the framework"
-msgstr ""
+msgstr "Отправить перевод автору SL framework."
 
 msgid "Select all"
 msgstr "Выбрать всё"
@@ -563,16 +564,16 @@ msgid "The file %s cannot be renamed. You should have a problem with file permis
 msgstr "Файл %s нельзя переименовать. У вас не достаточно прав для этого."
 
 msgid "Saved on %s"
-msgstr "Сохранено %s."
+msgstr "Сохранено %s"
 
 msgid "No cache file found... Regenerating one!"
-msgstr "Не найдет кэш-файл. Восстановите его."
+msgstr "Не найдет кэш-файл… Создаём новый."
 
 msgid "PHP Doc for the SL Framework"
-msgstr "Документация PHP для SL Framework"
+msgstr "Документация PHP для фреймворка SL"
 
 msgid "Here are the classes of the SL framework:"
-msgstr "Классы SL framework&#039;a"
+msgstr "Классы фреймворка SL"
 
 msgid "Here is the method of the class:"
 msgstr "Метод класса"
@@ -584,16 +585,16 @@ msgid "Details"
 msgstr "Подробнее"
 
 msgid "[METHOD]"
-msgstr "[Метод]"
+msgstr "[МЕТОД]"
 
 msgid "Parameters:"
 msgstr "Параметры:"
 
 msgid "[optional]"
-msgstr "[не обязательно]"
+msgstr "[опционально]"
 
 msgid "(by default, its value is:"
-msgstr "(значение по умолчанию:"
+msgstr "(значение по-умолчанию:"
 
 msgid "No param"
 msgstr "Нет параметров"
@@ -608,22 +609,22 @@ msgid "See also:"
 msgstr "См. также:"
 
 msgid "[CLASS]"
-msgstr " [Class]"
+msgstr "[КЛАСС]"
 
 msgid "KB"
-msgstr "КБ"
+msgstr "Кб"
 
 msgid "MB"
-msgstr "МБ"
+msgstr "Мб"
 
 msgid "GB"
-msgstr "ГБ"
+msgstr "Гб"
 
 msgid "Feedback form"
-msgstr "Форма обратной связи"
+msgstr "Обратная связь"
 
 msgid "This form is an easy way to contact the author and to discuss issues/incompatibilities/etc. with him"
-msgstr "Эта форма простой способ связаться с автором и обсудить вопросы / несовместимости / т.д. "
+msgstr "Эта форма — простой способ связаться с автором и обсудить вопросы / несовместимости / т.д."
 
 msgid "Contact the author"
 msgstr "Связаться с автором"
@@ -638,7 +639,7 @@ msgid "Your comments:"
 msgstr "Ваши комментарии:"
 
 msgid "Please note that additional information on your wordpress installation will be sent to the author in order to help the debugging if needed (such as : the wordpress version, the installed plugins, etc.)"
-msgstr " Обратите внимание, что дополнительная информация о вашей установке WordPress будет отправлена автору для того, чтобы помочь в отладке, если это необходимо (например: WordPress версии, установленные плагины и т.д.)"
+msgstr "Обратите внимание, что дополнительная информация о вашей установке WordPress будет отправлена автору для того, чтобы помочь в отладке, если это необходимо (например: WordPress версии, установленные плагины и т.д.)"
 
 msgid "Send feedback"
 msgstr "Отправить отзыв"
